--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 # visit https://github.com/mojombo/jekyll/wiki/Configuration for more settings
 
 paginate: 10 # pagination based on number of posts
-paginate_path: "page:num"
-pygments: true
-markdown: kramdown
-
+paginate_path: "page:num" #pagination generated sub path format
+pygments: true #for support {% highlight %}
+markdown: kramdown #use kramdown to parse markdown
+encoding: utf-8
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: "P_Chou Tech Space"
 
-description: Stylish Jekyll Theme
+description: "P_Chou Tech Space, share technology post"
 author:
-  name: dbyll
+  name: P_Chou
   email: dbyll@ismaildemirbilek.com
   github: dbtek
   twitter: dbtek
   pinterest: asd123
   linkedin: asd123
-  bio: Your stylish, minimalist theme!
+  bio: Do not build on quicksand high
   email_md5: 726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
